style.css
:root {
  font-size: 62.5%;
  color: #111;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

h1, h2, h3, h4 {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

ul {
  list-style: none;
}

img {
  width: 100%;
  height: 100%;
}

body, button, a {
  font-size: 1.6rem;
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

a {
  text-decoration: none;
}

.scroll-container {
  height: 100vh;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;
  scrollbar-color: transparent;
  &::-webkit-scrollbar {
    display: none;
  }
  scrollbar-width: none;
  -ms-overflow-style: none; 
  overflow-y: scroll;
}

.header {
  min-height: 100vh;
  display: grid;
  text-align: center;
  scroll-snap-align: start;
}

.headline {
  width: fit-content;
  height: fit-content;
  margin-top: 12px;
  font-size: 7.2rem;
  font-weight: 600;
  text-align: center;
  justify-self: center;
  position: relative;
}

.headline__label {
  width: 104px;
  height: 24px;
  padding: 18px 0 20px;  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.4rem;
  position: absolute;
}

.headline__label_left {
  left: -6px;
  top: -16px;
  margin-bottom: -1.6rem;
}

.headline__label_right {
  right: -6px;
  bottom: -20px;
  justify-self: end;
}

.subtitle {
  width: fit-content;
  height: fit-content;
  padding: 6px 12px;
  align-content: center;
  text-align: center;
  margin: 0 auto;
  font-weight: 500;
  font-size: 3.2rem;
  color: #fff;
  position: relative;
}

.subtitle::before {
  content: "";
  background-color: #111;
  width: 100%;
  height: 105%;
  top: 0;
  left: 0;
  position: absolute;
  transform: rotate(-2deg);
  z-index: -10;
}

.subtitle::after {
  content: "";
  background-color: #111;
  width: 100%;
  height: 105%;
  right: 0;
  top: 0;
  position: absolute;
  transform: rotate(2deg);
  z-index: -10;
}

.subtitle_sm {
  font-size: 1.6rem;
}

.cta-container {
  width: 100%;
  padding: 0 12px;
  grid-row: 4;
  display: flex;
  gap: 12px;
  justify-content: center;
}

.cta {
  width: 120px;
  height: 40px;
  padding-top: 8px;
  border: 2px solid #111;
  border-radius: 1px;
  display: inline-block;
  text-align: center;
  font-weight: bold;
  font-size: 1.6rem;
  cursor: pointer;
  transition: box-shadow .5s;
}

.cta_primary {
  color: white;
  background-color: #111;
  box-shadow: 6px 6px #2576E0;
}

.cta_secondary {
  color: #111;
  background-color: #fff;
  box-shadow: -6px 6px #111;
}

.cta:hover, .cta:focus {
  box-shadow: -12px 12px #2576E0;
}

.picture-container {
  width: 89%;
  max-height: 40vh;
  justify-self: center;
  border-radius: 2px;
  position: relative;
  transform: rotate(2deg);
  aspect-ratio: 3 / 4;
}

.picture-container::before {
  margin-left: -4px;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  background-color: #111;
  content: " ";
  position: absolute;
  transform: rotate(-4deg);
  z-index: -10;
}

.picture {
  filter: grayscale(1);
  object-fit: cover;
  object-position: center 15%;
}

.section {
  min-height: 100vh;
  margin-top: 40px;
  padding: 0 12px;
  display: grid;
  scroll-snap-align: start;
}

.section_column {
  width: 100%;
  max-width: 400px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  text-align: center;
  place-content: center;
}

.section__title {
  font-size: 6rem;
  font-weight: 600;
}

.project-title-container {
  min-width: 200px;
  position: relative;
  overflow: hidden;
}

.project-title {
  width: 100%;
  height: 30px;
  padding-right: 6px;
  font-size: 2rem;
  font-weight: 500;
  text-align: right;
  transition: all .3s;
  opacity: .5;
}

.project-title:hover {
  opacity: 1;
  cursor: pointer;
  background-color: #e7e7e7;
}

.project-title_selected {
  background-color: #111;
  color: #fff;
  font-size: 2.4rem;
  opacity: 1;
  position: relative;
}

.project-title_selected:hover {
  background-color: #111;
  opacity: 1;
  cursor: default;
}

.project-title_selected::before {
  content: "";
  position: absolute;
  top: calc(50% - 5px);
  left: 10px;
  border-radius: 1px;
  border-top: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-left: 10px solid #fff; 
}

.project-images-list {
  max-height: 40vh;
  position: relative;
  aspect-ratio: 16 / 9;
}

.project-images {
  width: 94%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  transition: all .3s;
  filter: grayscale(1);
}

.project-images:hover {
  filter: none;
  cursor: pointer;
}

.project-images_selected {
  filter: none;
  cursor: auto;
}

.project-images_selected:hover {
  cursor: auto;
}

.project-images_slide {
  animation-name: slide;
  animation-timing-function: ease-in-out;
  animation-fill-mode: forwards;
  animation-duration: 1s;
}

.project-desktop-img {
  width: 100%;
  height: auto;
  aspect-ratio: 16 / 9;
  border-radius: 12px 12px 4px 4px;
  padding: 4px 4px 24px;
  background-image: linear-gradient(silver, #111);
  z-index: -10;
}

.project-mobile-img {
  width: auto;
  height: 80%;
  padding: 2px;
  aspect-ratio: 9 / 16;
  border-radius: 14px;
  position: absolute;
  left: 8px;
  bottom: 4px;
  background-image: linear-gradient(silver, #fff);
}

.project-description {
  height: 6vh;
  margin: 12px 0;
  text-align: center;
}

.project-description_faded {
  opacity: .1;
}

.label-container {
  height: 15vh;
  display: flex;
  align-content: end;
  align-items: end;
  flex-wrap: wrap;
  gap: 6px;
  grid-column: 1 / 2;
  transition: opacity .5s;
}

.label-container_faded {
  opacity: .1;
}

.label {
  width: 104px;
  height: 24px;
  border: 1px solid #fff;
  border-radius: 1px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.6rem;
  background-color: #111;
  color: white;
  z-index: 10;
}

.section__picture {
  width: 50%;
}

.section__links {
  margin: 0 auto;
}

.section__link {
  width: 300px;
  height: 48px;
  padding-left: 48px;
  display: flex;
  align-items: center;
  font-size: 2rem;
  font-weight: 500;
  color: #111;
  gap: 16px;
  text-decoration: none;
  background-repeat: no-repeat;
  background-position: 8px;
  background-size: 32px;
}

.section__link:hover {
  text-decoration: underline;
}

.email {
  margin-top: 32px;
  padding-left: 48px;
  text-align: left;
  background-repeat: no-repeat;
  background-position: 8px;
  background-size: 32px;
  background-image: url('https://img.icons8.com/?size=100&id=pJJmXPomYuPv&format=png&color=000000');
}

.section__link_linkedin {
  animation-delay: 4s;
  background-image: url('https://img.icons8.com/?size=100&id=8808&format=png&color=000000');
}

.section__link_github {
  animation-delay: 5s;
  background-image: url('https://img.icons8.com/?size=100&id=RHLuYrY4GjUv&format=png&color=000000');
}

.section__link_goodreads {
  animation-delay: 6s;
  background-image: url('https://img.icons8.com/?size=100&id=eRXAEL4Ekpjt&format=png&color=000000');
}

.link-container {
  display: flex;
  align-items: end;
  justify-content: end;
  gap: 12px;
  height: 6vh;
}

.link-container_faded {
  opacity: .1;
}

.link {
  font-size: 1.6rem;
  color: #111;
  font-weight: 500;
}

.link:hover {
  color: #111;
}

@media (min-width: 576px) {

  body, button, a {
    font-size: 2rem;
  }

  .header {
    overflow: hidden;
  }

  .headline {
    align-self: center;
  }

  .cta-container {
    justify-content: end;
    padding-bottom: 20px;
    align-self: end;
  }

  .cta {
    width: 160px;
    height: 50px;
    padding-top: 10px;
    font-size: 2rem;
  }

  .picture-container {
    align-self: stretch;
    max-height: 100vh;
    justify-self: end;
    grid-row: 1 / 5;
    aspect-ratio: 9 / 16;
  }

  .section {
    grid-template-columns: 1fr 2fr;
  }

  .section__title {
    grid-column: span 2;
  }

  .section__first-pt {
    align-self: stretch;
  }

  .section__second-pt {
    padding-left: 24px;
  }

}

@media (min-width: 768px) {

  .headline {
    font-size: 8.4rem;
  }

  .headline__label {
    font-size: 3rem;
  }

  .section__title {
    font-size: 7rem;
  }

  .label {
    width: 120px;
    height: 32px;
    font-size: 1.8rem;
  }

  .project-title-container {
    width: 14%;
    padding-top: 28px;
  }

  .project-images-list {
    max-height: 55vh;
  }

}

@keyframes slide {
  0% {
  }

  50% {
    transform: translateX(900px);
  }

  100% {
    transform: none;
  }
}

